--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.content {
+  margin-top: 100px;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -27,7 +31,6 @@ body {
   min-width: 320px;
   width: 100%;
   height: 100%;
-  min-height: 100vh;
   display: block; /* Changed from flex to block */
   color: #31241E;
 }
