--- a/frontend/src/style/About.css
+++ b/frontend/src/style/About.css
@@ -34,6 +34,10 @@
     object-fit: cover;  
 }
 
+.about-container img{
+    border-radius: 0px;
+}
+
 .about-content {
     font-size: 16px;
     text-align: justify;
