--- a/frontend/src/style/ticket.css
+++ b/frontend/src/style/ticket.css
@@ -1,47 +1,67 @@
-<<<<<<< Updated upstream
 .shop{
     margin-top: 120px;
 }
 
 .ticket{
     display: flex;
-=======
-/* ticket.css */
-
-.ticket {
->>>>>>> Stashed changes
     background-color: #F1EBE5;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 15px;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px; /* Add margin between tickets */
+    margin: auto;
+    margin-bottom: 5px;
+    max-width: 700px;
+    position: relative;
+    margin-top: 15px;
+    align-content: flex-start;
 }
 
 .t-image {
-    width: 80px;
-    height: auto;
-    border: 1px solid black;
-    border-radius: 2px;
-    margin-right: 20px; /* Increase spacing between image and details */
+  margin: 5px;
+  margin-top: 10px;
+  width: 15%;
+  /*height: 150px;*/
+  border: 1px solid black;
+  border-radius: 2px;
 }
 
 .disc {
-    flex: 1;
+    display: inline;
+    padding-left: 20px;
+    padding-right: 150px;
 }
 
 .title-item {
-    font-weight: bold;
-    margin-bottom: 5px;
+    text-align: left;
+
+
 }
 
 .type-item {
+    font-weight: bold;
     margin-top: 3px;
-    margin-bottom: 5px;
 }
 
-.buy-btn,
+.ticket-price {
+    display: flex;
+    flex-direction: row;
+    margin-top: 3px;
+    margin-bottom: 3px;
+
+
+}
+
+.ticket-item img{
+    margin-right: 10px;
+    width: 4%;
+
+}
+
+.ticket-price img{
+    margin-right: 5px;
+    width: 6%;
+
+}
+/*.buy-btn,
 .bin-btn {
     border-radius: 10px;
     font-size: 17px;
@@ -73,7 +93,47 @@
 .bin-btn:focus,
 .bin-btn:focus-visible {
     outline: none;
+}*/
+
+.buy-btn {
+    background-color: #D1C8C1;
+    /* align-self: baseline; */
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    border-radius: 10px;
+    padding: 5px 20px;
+    font-size: 17px;
+    color: white;
+    font-weight: bolder;
+    margin-top: 5px;
 }
+
+.buy-btn:disabled {
+    background-color: #b5b0ac;
+    color: rgb(213, 212, 212);
+    cursor: auto;
+}
+
+.bin-btn {
+    background-color: transparent;
+    fill: #000000;
+    border: none;
+    margin: 50px 0 50px 0;
+}
+
+.bin-btn:hover {
+    background-color: transparent;
+    fill: #ff0000;
+}
+
+.bin-btn:focus, .bin-btn:focus-visible {
+    outline: none;
+}
+
+
+
+
 
 
 
