--- a/frontend/src/style/retreat.css
+++ b/frontend/src/style/retreat.css
@@ -1,3 +1,10 @@
+.cart-head{
+    margin: 120px auto 30px;
+    max-width: 700px;
+    padding-left: 10px;
+}
+
+
 .ticket-table {
     width: 50%; /* Reduce table width */
     margin: 20px auto;
